--- a/tools/style.css
+++ b/tools/style.css
@@ -5,7 +5,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input
 body{
 margin:20px;
 padding:10px;
-background: #0e1d3a url(../images/bgtest.png) top center no-repeat;
+background: #0e1d3a url(../images/bg.png) top center no-repeat;
 font-family: Helvetica Neue, Helvetica, Arial;
 }
 
